src/Editor/LibreLancer.ImUI/ImPlot/ImPlotNative.cs


    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_S16PtrS16PtrInt(byte* label_id,short* values,short* szs,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_U16PtrU16PtrInt(byte* label_id,ushort* values,ushort* szs,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_S32PtrS32PtrInt(byte* label_id,int* values,int* szs,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_U32PtrU32PtrInt(byte* label_id,uint* values,uint* szs,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_S64PtrS64PtrInt(byte* label_id,long* values,long* szs,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_U64PtrU64PtrInt(byte* label_id,ulong* values,ulong* szs,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_FloatPtrFloatPtrFloatPtr(byte* label_id,float* xs,float* ys,float* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_doublePtrdoublePtrdoublePtr(byte* label_id,double* xs,double* ys,double* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_S16PtrS16PtrS16Ptr(byte* label_id,short* xs,short* ys,short* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_U16PtrU16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys,ushort* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_S32PtrS32PtrS32Ptr(byte* label_id,int* xs,int* ys,int* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_U32PtrU32PtrU32Ptr(byte* label_id,uint* xs,uint* ys,uint* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_S64PtrS64PtrS64Ptr(byte* label_id,long* xs,long* ys,long* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_U64PtrU64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys,ulong* szs,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_FloatPtr(byte* label_id,float* xs,float* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_doublePtr(byte* label_id,double* xs,double* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_S16Ptr(byte* label_id,short* xs,short* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_U16Ptr(byte* label_id,ushort* xs,ushort* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_S32Ptr(byte* label_id,int* xs,int* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_U32Ptr(byte* label_id,uint* xs,uint* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_S64Ptr(byte* label_id,long* xs,long* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigital_U64Ptr(byte* label_id,ulong* xs,ulong* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDigitalG(byte* label_id,delegate* unmanaged<int, void*, ImPlotPoint> getter,void* data,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotDummy(byte* label_id,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_FloatPtrFloatPtrFloatPtrInt(byte* label_id,float* xs,float* ys,float* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_doublePtrdoublePtrdoublePtrInt(byte* label_id,double* xs,double* ys,double* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_S16PtrS16PtrS16PtrInt(byte* label_id,short* xs,short* ys,short* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_U16PtrU16PtrU16PtrInt(byte* label_id,ushort* xs,ushort* ys,ushort* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_S32PtrS32PtrS32PtrInt(byte* label_id,int* xs,int* ys,int* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_U32PtrU32PtrU32PtrInt(byte* label_id,uint* xs,uint* ys,uint* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_S64PtrS64PtrS64PtrInt(byte* label_id,long* xs,long* ys,long* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_U64PtrU64PtrU64PtrInt(byte* label_id,ulong* xs,ulong* ys,ulong* err,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_FloatPtrFloatPtrFloatPtrFloatPtr(byte* label_id,float* xs,float* ys,float* neg,float* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_doublePtrdoublePtrdoublePtrdoublePtr(byte* label_id,double* xs,double* ys,double* neg,double* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_S16PtrS16PtrS16PtrS16Ptr(byte* label_id,short* xs,short* ys,short* neg,short* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_U16PtrU16PtrU16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys,ushort* neg,ushort* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_S32PtrS32PtrS32PtrS32Ptr(byte* label_id,int* xs,int* ys,int* neg,int* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_U32PtrU32PtrU32PtrU32Ptr(byte* label_id,uint* xs,uint* ys,uint* neg,uint* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_S64PtrS64PtrS64PtrS64Ptr(byte* label_id,long* xs,long* ys,long* neg,long* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotErrorBars_U64PtrU64PtrU64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys,ulong* neg,ulong* pos,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_FloatPtr(byte* label_id,float* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_doublePtr(byte* label_id,double* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_S16Ptr(byte* label_id,short* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_U16Ptr(byte* label_id,ushort* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_S32Ptr(byte* label_id,int* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_U32Ptr(byte* label_id,uint* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_S64Ptr(byte* label_id,long* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotHeatmap_U64Ptr(byte* label_id,ulong* values,int rows,int cols,double scale_min,double scale_max,byte* label_fmt,ImPlotPoint bounds_min,ImPlotPoint bounds_max,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_FloatPtr(byte* label_id,float* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_doublePtr(byte* label_id,double* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_S16Ptr(byte* label_id,short* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_U16Ptr(byte* label_id,ushort* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_S32Ptr(byte* label_id,int* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_U32Ptr(byte* label_id,uint* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_S64Ptr(byte* label_id,long* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram_U64Ptr(byte* label_id,ulong* values,int count,int bins,double bar_scale,ImPlotRange range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_FloatPtr(byte* label_id,float* xs,float* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_doublePtr(byte* label_id,double* xs,double* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_S16Ptr(byte* label_id,short* xs,short* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_U16Ptr(byte* label_id,ushort* xs,ushort* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_S32Ptr(byte* label_id,int* xs,int* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_U32Ptr(byte* label_id,uint* xs,uint* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_S64Ptr(byte* label_id,long* xs,long* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern double ImPlot_PlotHistogram2D_U64Ptr(byte* label_id,ulong* xs,ulong* ys,int count,int x_bins,int y_bins,ImPlotRect range,ImPlotSpec spec);
